--- a/templates/daemonset-mon.yaml
+++ b/templates/daemonset-mon.yaml
@@ -37,7 +37,7 @@ spec:
       initContainers:
 {{ tuple $envAll $dependencies "" | include "helm-toolkit.snippets.kubernetes_entrypoint_init_container" | indent 8 }}
         - name: ceph-init-dirs
-          image: {{ .Values.images.tags.ceph_daemon }}
+          image: {{ .Values.images.daemon }}
           imagePullPolicy: {{ .Values.images.pull_policy }}
           command:
             - /tmp/init_dirs.sh
@@ -53,15 +53,42 @@ spec:
             - name: pod-var-lib-ceph
               mountPath: /var/lib/ceph
               readOnly: false
-            - name: mon-directory
-              mountPath: /var/lib/ceph/mon
-              readOnly: false
             - name: pod-run
               mountPath: /run
               readOnly: false
       containers:
+        {{- if not .Values.ceph.storage.mon_log }}
+        - name: cluster-audit-log-tailer
+          image: {{ .Values.images.minimal }}
+          imagePullPolicy: {{ .Values.images.pull_policy }}
+          command:
+            - /tmp/log_handler.sh
+          args:
+            - /var/log/ceph/ceph.audit.log
+          volumeMounts:
+            - name: pod-var-log-ceph
+              mountPath: /var/log/ceph
+              readOnly: false
+            - name: ceph-bin
+              mountPath: /tmp/log_handler.sh
+              subPath: log_handler.sh
+        - name: cluster-log-tailer
+          image: {{ .Values.images.minimal }}
+          imagePullPolicy: {{ .Values.images.pull_policy }}
+          command:
+            - /tmp/log_handler.sh
+          args:
+            - /var/log/ceph/ceph.log
+          volumeMounts:
+            - name: pod-var-log-ceph
+              mountPath: /var/log/ceph
+              readOnly: false
+            - name: ceph-bin
+              mountPath: /tmp/log_handler.sh
+              subPath: log_handler.sh
+        {{- end }}
         - name: ceph-mon
-          image: {{ .Values.images.tags.ceph_daemon }}
+          image: {{ .Values.images.daemon }}
           imagePullPolicy: {{ .Values.images.pull_policy }}
 {{ tuple $envAll $envAll.Values.pod.resources.osd | include "helm-toolkit.snippets.kubernetes_resources" | indent 10 }}
           env:
@@ -86,11 +113,6 @@ spec:
                   fieldPath: status.podIP
           command:
             - /start_mon.sh
-          lifecycle:
-            preStop:
-                exec:
-                  command:
-                    - /remove-mon.sh
           ports:
             - containerPort: 6789
           livenessProbe:
@@ -106,10 +128,6 @@ spec:
             - name: ceph-bin
               mountPath: /start_mon.sh
               subPath: start_mon.sh
-              readOnly: true
-            - name: ceph-bin
-              mountPath: /remove-mon.sh
-              subPath: remove-mon.sh
               readOnly: true
             - name: ceph-bin
               mountPath: /common_functions.sh
@@ -146,8 +164,8 @@ spec:
             - name: pod-var-lib-ceph
               mountPath: /var/lib/ceph
               readOnly: false
-            - name: mon-directory
-              mountPath: /var/lib/ceph/mon
+            - name: pod-var-log-ceph
+              mountPath: /var/log/ceph
               readOnly: false
             - name: pod-run
               mountPath: /run
@@ -161,14 +179,19 @@ spec:
           configMap:
             name: ceph-etc
             defaultMode: 0444
-        - name: pod-var-lib-ceph
+        - name: pod-var-log-ceph
+        {{- if .Values.ceph.storage.mon_log }}
+          hostPath:
+            path: {{ .Values.ceph.storage.mon_log }}
+        {{- else }}
           emptyDir: {}
+        {{- end }}
+        - name: pod-var-lib-ceph
+          hostPath:
+            path: {{ tuple .Values.ceph.storage.mon_directory .Release.Namespace "mon" | join "/" }}
         - name: pod-run
           emptyDir:
             medium: "Memory"
-        - name: mon-directory
-          hostPath:
-            path: {{ .Values.ceph.storage.mon_directory }}
         - name: ceph-client-admin-keyring
           secret:
             secretName: {{ .Values.secrets.keyrings.admin }}
