--- a/templates/daemonset-osd.yaml
+++ b/templates/daemonset-osd.yaml
@@ -17,6 +17,7 @@ limitations under the License.
 {{- if .Values.manifests.daemonset_osd }}
 {{- $envAll := . }}
 {{- if .Values.deployment.ceph }}
+{{- if .Values.osd_directory.enabled }}
 {{- $dependencies := .Values.dependencies.osd }}
 ---
 kind: DaemonSet
@@ -36,7 +37,7 @@ spec:
       initContainers:
 {{ tuple $envAll $dependencies "" | include "helm-toolkit.snippets.kubernetes_entrypoint_init_container" | indent 8 }}
         - name: ceph-init-dirs
-          image: {{ .Values.images.tags.ceph_daemon }}
+          image: {{ .Values.images.daemon }}
           imagePullPolicy: {{ .Values.images.pull_policy }}
           command:
             - /tmp/init_dirs.sh
@@ -57,7 +58,7 @@ spec:
               readOnly: false
       containers:
         - name: osd-pod
-          image: {{ .Values.images.tags.ceph_daemon }}
+          image: {{ .Values.images.daemon }}
           imagePullPolicy: {{ .Values.images.pull_policy }}
 {{ tuple $envAll $envAll.Values.pod.resources.osd | include "helm-toolkit.snippets.kubernetes_resources" | indent 10 }}
           securityContext:
@@ -87,6 +88,10 @@ spec:
             - name: ceph-bin
               mountPath: /start_osd.sh
               subPath: start_osd.sh
+              readOnly: true
+            - name: ceph-bin
+              mountPath: /variables_entrypoint.sh
+              subPath: variables_entrypoint.sh
               readOnly: true
             - name: ceph-bin
               mountPath: /osd_directory.sh
@@ -126,6 +131,11 @@ spec:
             - name: pod-var-lib-ceph
               mountPath: /var/lib/ceph
               readOnly: false
+            {{- if .Values.ceph.storage.osd_log }}
+            - name: pod-var-log-ceph
+              mountPath: /var/log/ceph
+              readOnly: false
+            {{- end }}
             - name: pod-run
               mountPath: /run
               readOnly: false
@@ -135,12 +145,14 @@ spec:
             path: /dev
         - name: pod-var-lib-ceph
           emptyDir: {}
+        {{- if .Values.ceph.storage.osd_log }}
+        - name: pod-var-log-ceph
+          hostPath:
+            path: {{ .Values.ceph.storage.osd_log }}
+        {{- end }}
         - name: pod-run
           emptyDir:
             medium: "Memory"
-        - name: ceph
-          hostPath:
-            path: {{ .Values.ceph.storage.var_directory }}
         - name: ceph-bin
           configMap:
             name: ceph-bin
@@ -166,6 +178,7 @@ spec:
             secretName: {{ .Values.secrets.keyrings.rgw }}
         - name: osd-directory
           hostPath:
-            path: {{ .Values.ceph.storage.osd_directory }}
+            path: {{ tuple .Values.ceph.storage.osd_directory .Release.Namespace "osd" | join "/" }}
+{{- end }}
 {{- end }}
 {{- end }}
