--- a/templates/deployment-mgr.yaml
+++ b/templates/deployment-mgr.yaml
@@ -14,26 +14,31 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */}}
 
-{{- if .Values.manifests.deployment_moncheck }}
+{{- if .Values.manifests.deployment_mgr }}
 {{- $envAll := . }}
 {{- if .Values.deployment.ceph }}
-{{- $dependencies := .Values.dependencies.moncheck }}
+{{- if .Values.ceph.enabled.mgr }}
+{{- $dependencies := .Values.dependencies.mgr }}
 ---
 kind: Deployment
 apiVersion: apps/v1beta1
 metadata:
-  name: ceph-mon-check
+  name: ceph-mgr
 spec:
-  replicas: {{ .Values.pod.replicas.mon_check }}
+  replicas: {{ .Values.pod.replicas.mgr }}
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
-{{ tuple $envAll "ceph" "moncheck" | include "helm-toolkit.snippets.kubernetes_metadata_labels" | indent 8 }}
+{{ tuple $envAll "ceph" "mgr" | include "helm-toolkit.snippets.kubernetes_metadata_labels" | indent 8 }}
     spec:
       affinity:
-{{ tuple $envAll "ceph" "moncheck" | include "helm-toolkit.snippets.kubernetes_pod_anti_affinity" | indent 8 }}
+{{ tuple $envAll "ceph" "mgr" | include "helm-toolkit.snippets.kubernetes_pod_anti_affinity" | indent 8 }}
       nodeSelector:
-        {{ .Values.labels.mon.node_selector_key }}: {{ .Values.labels.mon.node_selector_value }}
+        {{ .Values.labels.mgr.node_selector_key }}: {{ .Values.labels.mgr.node_selector_value }}
+      hostNetwork: true
+      dnsPolicy: {{ .Values.pod.dns_policy }}
       serviceAccount: default
       initContainers:
 {{ tuple $envAll $dependencies "" | include "helm-toolkit.snippets.kubernetes_entrypoint_init_container" | indent 8 }}
@@ -54,58 +59,77 @@ spec:
             - name: pod-var-lib-ceph
               mountPath: /var/lib/ceph
               readOnly: false
+            - name: pod-run
+              mountPath: /run
+              readOnly: false
+            - name: pod-etc-ceph
+              mountPath: /etc/ceph
       containers:
-        - name: ceph-mon
+        - name: ceph-mgr
           image: {{ .Values.images.daemon }}
           imagePullPolicy: {{ .Values.images.pull_policy }}
-{{ tuple $envAll $envAll.Values.pod.resources.moncheck | include "helm-toolkit.snippets.kubernetes_resources" | indent 10 }}
+{{ tuple $envAll $envAll.Values.pod.resources.mgr | include "helm-toolkit.snippets.kubernetes_resources" | indent 10 }}
           env:
-            - name: K8S_HOST_NETWORK
-              value: "1"
-            - name: NAMESPACE
-              valueFrom:
-                fieldRef:
-                  apiVersion: v1
-                  fieldPath: metadata.namespace
+            {{- if .Values.ceph_mgr_enabled_modules }}
+            - name: ENABLED_MODULES
+              value: |-
+              {{- range $value := .Values.ceph_mgr_enabled_modules }}
+                {{ $value }}
+              {{- end }}
+            {{- end }}
+            {{- if .Values.ceph_mgr_modules_config }}
+            {{- range $module,$params := .Values.ceph_mgr_modules_config }}
+            {{- range $key, $value := $params }}
+            - name: {{ $module }}_{{ $key }}
+              value: {{ $value | quote }}
+            {{- end }}
+            {{- end }}
+            {{- end }}
           command:
-            - /watch_mon_health.sh
-          ports:
-            - containerPort: 6789
+            - /start_mgr.sh
+          livenessProbe:
+              exec:
+                command:
+                  - bash
+                  - /check_mgr.sh
+              initialDelaySeconds: 30
+              timeoutSeconds: 5
+          readinessProbe:
+              exec:
+                command:
+                  - bash
+                  - /check_mgr.sh
+              initialDelaySeconds: 30
+              timeoutSeconds: 5
           volumeMounts:
-            - name: ceph-bin
-              mountPath: /watch_mon_health.sh
-              subPath: watch_mon_health.sh
+            - name: pod-etc-ceph
+              mountPath: /etc/ceph
+            - name: ceph-etc
+              mountPath: /etc/ceph/ceph.conf
+              subPath: ceph.conf
               readOnly: true
             - name: ceph-bin
-              mountPath: /check_zombie_mons.py
-              subPath: check_zombie_mons.py
+              mountPath: /start_mgr.sh
+              subPath: start_mgr.sh
+              readOnly: true
+            - name: ceph-bin
+              mountPath: /variables_entrypoint.sh
+              subPath: variables_entrypoint.sh
               readOnly: true
             - name: ceph-bin
               mountPath: /common_functions.sh
               subPath: common_functions.sh
               readOnly: true
-            - name: ceph-etc
-              mountPath: /etc/ceph/ceph.conf
-              subPath: ceph.conf
+            - name: ceph-bin
+              mountPath: /check_mgr.sh
+              subPath: check_mgr.sh
               readOnly: true
             - name: ceph-client-admin-keyring
               mountPath: /etc/ceph/ceph.client.admin.keyring
               subPath: ceph.client.admin.keyring
               readOnly: true
-            - name: ceph-mon-keyring
-              mountPath: /etc/ceph/ceph.mon.keyring
-              subPath: ceph.mon.keyring
-              readOnly: true
-            - name: ceph-bootstrap-osd-keyring
-              mountPath: /var/lib/ceph/bootstrap-osd/ceph.keyring
-              subPath: ceph.keyring
-              readOnly: false
-            - name: ceph-bootstrap-mds-keyring
-              mountPath: /var/lib/ceph/bootstrap-mds/ceph.keyring
-              subPath: ceph.keyring
-              readOnly: false
-            - name: ceph-bootstrap-rgw-keyring
-              mountPath: /var/lib/ceph/bootstrap-rgw/ceph.keyring
+            - name: ceph-bootstrap-mgr-keyring
+              mountPath: /var/lib/ceph/bootstrap-mgr/ceph.keyring
               subPath: ceph.keyring
               readOnly: false
             - name: pod-var-lib-ceph
@@ -115,14 +139,16 @@ spec:
               mountPath: /run
               readOnly: false
       volumes:
-        - name: ceph-etc
-          configMap:
-            name: ceph-etc
-            defaultMode: 0444
+        - name: pod-etc-ceph
+          emptyDir: {}
         - name: ceph-bin
           configMap:
             name: ceph-bin
             defaultMode: 0555
+        - name: ceph-etc
+          configMap:
+            name: ceph-etc
+            defaultMode: 0444
         - name: pod-var-lib-ceph
           emptyDir: {}
         - name: pod-run
@@ -131,17 +157,9 @@ spec:
         - name: ceph-client-admin-keyring
           secret:
             secretName: {{ .Values.secrets.keyrings.admin }}
-        - name: ceph-mon-keyring
+        - name: ceph-bootstrap-mgr-keyring
           secret:
-            secretName: {{ .Values.secrets.keyrings.mon }}
-        - name: ceph-bootstrap-osd-keyring
-          secret:
-            secretName: {{ .Values.secrets.keyrings.osd }}
-        - name: ceph-bootstrap-mds-keyring
-          secret:
-            secretName: {{ .Values.secrets.keyrings.mds }}
-        - name: ceph-bootstrap-rgw-keyring
-          secret:
-            secretName: {{ .Values.secrets.keyrings.rgw }}
+            secretName: {{ .Values.secrets.keyrings.mgr }}
+{{- end }}
 {{- end }}
 {{- end }}
