--- a/templates/storageclass.yaml
+++ b/templates/storageclass.yaml
@@ -17,7 +17,6 @@ limitations under the License.
 {{- if .Values.manifests.storageclass }}
 {{- $envAll := . }}
 {{- if .Values.deployment.ceph }}
-{{- if .Values.storageclass.provision_storage_class }}
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -32,6 +31,7 @@ parameters:
     pool: {{ .Values.storageclass.pool }}
     userId: {{ .Values.storageclass.user_id }}
     userSecretName: {{ .Values.storageclass.user_secret_name }}
-{{- end }}
+    imageFormat: {{ .Values.storageclass.image_format | quote }}
+    imageFeatures: {{ .Values.storageclass.image_features }}
 {{- end }}
 {{- end }}
