--- a/values.yaml
+++ b/values.yaml
@@ -20,20 +20,20 @@ deployment:
   rgw_keystone_user_and_endpoints: false
 
 images:
-  tags:
-    ks_user: docker.io/kolla/ubuntu-source-heat-engine:3.0.3
-    ks_service: docker.io/kolla/ubuntu-source-heat-engine:3.0.3
-    ks_endpoints: docker.io/kolla/ubuntu-source-heat-engine:3.0.3
-    ceph_bootstrap: quay.io/attcomdev/ceph-daemon:tag-build-master-jewel-ubuntu-16.04
-    dep_check: quay.io/stackanetes/kubernetes-entrypoint:v0.2.1
-    ceph_daemon: quay.io/attcomdev/ceph-daemon:tag-build-master-jewel-ubuntu-16.04
-    ceph_config_helper: docker.io/port/ceph-config-helper:v1.7.5
-    ceph_rbd_provisioner: quay.io/external_storage/rbd-provisioner:v0.1.1
+  ks_user: docker.io/kolla/ubuntu-source-heat-engine:3.0.3
+  ks_service: docker.io/kolla/ubuntu-source-heat-engine:3.0.3
+  ks_endpoints: docker.io/kolla/ubuntu-source-heat-engine:3.0.3
+  bootstrap: docker.io/ceph/daemon:tag-build-master-luminous-ubuntu-16.04
+  dep_check: docker.io/kolla/ubuntu-source-kubernetes-entrypoint:4.0.0
+  daemon: docker.io/ceph/daemon:tag-build-master-luminous-ubuntu-16.04
+  ceph_config_helper: docker.io/port/ceph-config-helper:v1.7.5
+  rbd_provisioner: quay.io/external_storage/rbd-provisioner:v0.1.1
+  minimal: docker.io/alpine:latest
   pull_policy: "IfNotPresent"
 
 labels:
   jobs:
-    node_selector_key: openstack-control-plane
+    node_selector_key: ceph-mon
     node_selector_value: enabled
   mon:
     node_selector_key: ceph-mon
@@ -47,6 +47,9 @@ labels:
   rgw:
     node_selector_key: ceph-rgw
     node_selector_value: enabled
+  mgr:
+    node_selector_key: ceph-mgr
+    node_selector_value: enabled
 
 pod:
   dns_policy: "ClusterFirstWithHostNet"
@@ -54,6 +57,7 @@ pod:
     rgw: 1
     mon_check: 1
     rbd_provisioner: 2
+    mgr: 1
   affinity:
       anti:
         type:
@@ -104,6 +108,13 @@ pod:
       limits:
         memory: "50Mi"
         cpu: "500m"
+    mgr:
+      requests:
+        memory: "5Mi"
+        cpu: "250m"
+      limits:
+        memory: "50Mi"
+        cpu: "500m"
     jobs:
       bootstrap:
         limits:
@@ -147,6 +158,7 @@ secrets:
     mds: ceph-bootstrap-mds-keyring
     osd: ceph-bootstrap-osd-keyring
     rgw: ceph-bootstrap-rgw-keyring
+    mgr: ceph-bootstrap-mgr-keyring
     admin: ceph-client-admin-keyring
   identity:
     admin: ceph-keystone-admin
@@ -172,61 +184,10 @@ conf:
     append:
     config:
       global:
-        # auth
-        cephx: true
-        cephx_require_signatures: false
-        cephx_cluster_require_signatures: true
-        cephx_service_require_signatures: false
-
-        max_open_files: 131072
-        osd_pool_default_pg_num: 128
-        osd_pool_default_pgp_num: 128
-        osd_pool_default_size: 3
-        osd_pool_default_min_size: 1
-        mon_osd_full_ratio: .95
-        mon_osd_nearfull_ratio: .85
         mon_host: null
-      mon:
-        mon_osd_down_out_interval: 600
-        mon_osd_min_down_reporters: 4
-        mon_clock_drift_allowed: .15
-        mon_clock_drift_warn_backoff: 30
-        mon_osd_report_timeout: 300
       osd:
-        journal_size: 100
-        osd_mkfs_type: xfs
-        osd_mkfs_options_xfs: -f -i size=2048
-        osd_mon_heartbeat_interval: 30
-        osd_max_object_name_len: 256
-        #crush
-        osd_pool_default_crush_rule: 0
-        osd_crush_update_on_start: true
-        osd_crush_chooseleaf_type: 1
-        #backend
-        osd_objectstore: filestore
-        #performance tuning
-        filestore_merge_threshold: 40
-        filestore_split_multiple: 8
-        osd_op_threads: 8
-        filestore_op_threads: 8
-        filestore_max_sync_interval: 5
-        osd_max_scrubs: 1
-        #recovery tuning
-        osd_recovery_max_active: 5
-        osd_max_backfills: 2
-        osd_recovery_op_priority: 2
-        osd_client_op_priority: 63
-        osd_recovery_max_chunk: 1048576
-        osd_recovery_threads: 1
         #ports
-        ms_bind_port_min: 6800
         ms_bind_port_max: 7100
-      client:
-        rbd_cache_enabled: true
-        rbd_cache_writethrough_until_flush: true
-        rbd_default_features: "1"
-      mds:
-        mds_cache_size: 100000
 
 dependencies:
   mon:
@@ -258,7 +219,7 @@ dependencies:
     - service: ceph_mon
       endpoint: internal
   rbd_provisioner:
-    services:
+    jobs:
     - service: ceph_mon
       endpoint: internal
   ks_user:
@@ -275,16 +236,48 @@ dependencies:
     services:
     - service: identity
       endpoint: internal
+  mgr:
+    jobs:
+    services:
+    - service: ceph_mon
+      endpoint: internal
+  ceph_commands:
+    services:
+    - service: ceph_mon
+      endpoint: internal
 
 ceph:
   rgw_keystone_auth: false
   enabled:
     mds: true
     rgw: true
+    mgr: true
   storage:
-    osd_directory: /var/lib/openstack-helm/ceph/osd
-    var_directory: /var/lib/openstack-helm/ceph/ceph
-    mon_directory: /var/lib/openstack-helm/ceph/mon
+    # will have $NAMESPACE/{osd,mon} appended
+    osd_directory: /var/lib/ceph-helm
+    mon_directory: /var/lib/ceph-helm
+    # use /var/log for fluentd to collect ceph log
+    # mon_log: /var/log/ceph/mon
+    # osd_log: /var/log/ceph/osd
+
+osd_directory:
+  enabled: false
+
+# To use OSD devices
+# journal is optional
+# /!\ /!\
+# To allow for a disk to be zapped, set zap: "1" on each
+# device and enable_zap_and_potentially_lose_data: true
+# While we prevent you from zapping a drive that belonged
+# to this cluster, if a drive belonged to another cluster or
+# has important data from another application, it will be *LOST*
+# /!\ /!\
+enable_zap_and_potentially_lose_data: false
+#osd_devices:
+#  - name: dev-sdc
+#    device: /dev/sdc
+#    journal: /dev/sdf
+#    zap: "1"
 
 bootstrap:
   enabled: false
@@ -294,6 +287,37 @@ bootstrap:
       ceph osd pool stats $1 || ceph osd pool create $1 $2
     }
     ensure_pool volumes 8
+
+# Uncomment below to enable mgr modules
+# For a list of available modules:
+#  http://docs.ceph.com/docs/master/mgr/
+# This overrides mgr_initial_modules (default: restful, status)
+# Any module not listed here will be disabled
+ceph_mgr_enabled_modules:
+  - restful
+  - status
+
+# You can configure your mgr modules
+# below. Each module has its own set
+# of key/value. Refer to the doc
+# above for more info. For example:
+#ceph_mgr_modules_config:
+#  dashboard:
+#    port: 7000
+#  localpool:
+#    failure_domain: host
+#    subtree: rack
+#    pg_num: "128"
+#    num_rep: "3"
+#    min_size: "2"
+
+# You can run any ceph commands upon deployment
+# or upgrade by setting the following.
+# These will be executed via kubectl exec
+# Do *not* use ';' it is used internally as a delimiter
+#ceph_commands:
+# - ceph osd pool create <pool> <pg_num>
+# - ceph osd crush tunables <tunables>
 
 # if you change provision_storage_class to false
 # it is presumed you manage your own storage
@@ -309,6 +333,8 @@ storageclass:
   admin_secret_namespace: ceph
   user_id: admin
   user_secret_name: pvc-ceph-client-key
+  image_format: "2"
+  image_features: layering
 
 endpoints:
   cluster_domain_suffix: cluster.local
@@ -382,6 +408,7 @@ manifests:
   deployment_moncheck: true
   deployment_rbd_provisioner: true
   deployment_rgw: true
+  deployment_mgr: true
   job_bootstrap: true
   job_keyring: true
   job_ks_endpoints: true
@@ -390,6 +417,7 @@ manifests:
   job_namespace_client_key_cleaner: true
   job_namespace_client_key: true
   job_storage_admin_keys: true
+  job_storage_admin_keys_cleaner: true
   secret_keystone_rgw: true
   secret_keystone: true
   service_mon: true
